FSAR-224: Article page and sticky sidebar - Prevent the sidebar from overlapping footer content

--- a/src/components/article/StickySidebar/stickySidebar.scss
+++ b/src/components/article/StickySidebar/stickySidebar.scss
@@ -3,6 +3,7 @@
 .sticky-sidebar {
   margin-bottom: 2rem;
   @media screen and (min-width: $fsa-lg) {
+     height: 100%;
      margin-top: 0;
   }
   &--fixed {
@@ -10,6 +11,14 @@
       top: 1rem;
       position: fixed;
       z-index: 1;
+    }
+  }
+  &--bottom {
+    @media screen and (min-width: $fsa-lg) {
+      position: relative;
+      display: flex;
+      align-items: flex-end;
+      bottom: 0;
     }
   }
   &__content-item {
